# idleon-saver

./: .deepsource.toml  .gitignore  .gitmodules  Idleon Saver.spec  README.md  main.spec  onedir.spec  onefile.spec  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  scan.yml  test.yml
data/: __init__.py  inject.js
idleon_save_editor/: common.py  config.py  json2stencyl.py  ldb.py  ldb2stencyl.py  stencyl.py  stencyl2json.py  stencyl2ldb.py  utility.py
idleon_save_editor/stencyl/: common.py  decoder.py  encoder.py
idleon_saver/: ldb.py  utility.py
idleon_saver/data/: __init__.py
idleon_saver/gui/: main.kv  main.py  saver.kv
idleon_saver/scripts/: decode.py  encode.py  export.py  inject.js  inject.py  mangle.py  trim_save.py
idleon_saver/stencyl/: common.py  decoder.py  encoder.py
scripts/: common.py  decode.py  encode.py  export.py  gui.py  inject.js  inject.py  json2stencyl.py  ldb2stencyl.py  mangle.py  stencyl2json.py  stencyl2ldb.py  trim_save.py
tests/: conftest.py  test_export.py  test_gui.py  test_ldb.py  test_scripts.py  test_stencyl.py
tests/data/: firebase.json  local.json  save.json  stencylsave.txt
wheels/: plyvel-1.4.0-cp310-cp310-win_amd64.whl  plyvel-1.4.0-cp39-cp39-win_amd64.whl
