[tool.poetry]
name = "idleon-saver"
version = "1.1.0"
description = "Converts Legends of Idleon Steam save data to and from JSON."
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plyvel = { version = "^1.3.0", markers = "sys_platform != 'win32'" }
plyvel-win32 = { version = "^1.3.0", markers = "sys_platform == 'win32'" }
Kivy = { extras = ["base"], version = "^2.0.0" }
chromecontroller = { git = "https://github.com/desophos/ChromeController.git" }
pywin32 = { version = ">=300", markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
black = { version = "^21.6-beta.0", allow-prereleases = true }
mypy = "^0.910"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
