[tool.poetry]
name = "idleon-saver"
version = "3.1.3"
description = "Converts Legends of Idleon Steam save data to and from JSON."
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/desophos/idleon-saver"

[tool.poetry.dependencies]
plyvel = { version = "^1.3.0", markers = "sys_platform != 'win32'" }
plyvel-win32 = { version = "^1.3.0", markers = "sys_platform == 'win32'" }
Kivy = { extras = ["base"], version = "^2.0.0" }
python = ">=3.9.0, <=3.9.9"
chromecontroller = { git = "https://github.com/desophos/ChromeController.git" }
pywin32 = { version = ">=300", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "^21.12b0", allow-prereleases = true }
mypy = "^0.930"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
telenium = { git = "https://github.com/desophos/telenium.git" }

[build-system]
requires = ["poetry-core>=1.2.0a2"]
build-backend = "poetry.core.masonry.api"
