[tool.poetry]
name = "idleon-saver"
version = "3.1.4"
description = "Converts Legends of Idleon Steam save data to and from JSON."
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/desophos/idleon-saver"

[tool.poetry.dependencies]
python = ">=3.9.0, <=3.9.9"
plyvel = [
    { version = "^1.4", markers = "sys_platform != 'win32'" },
    { path = "wheels/plyvel-1.4.0-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32' and python_version ~= '3.9'" },
    { path = "wheels/plyvel-1.4.0-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32' and python_version ~= '3.10'" },
]
kivy = { extras = ["base"], version = "^2.1" }
chromecontroller = { git = "https://github.com/desophos/ChromeController.git" }
pywin32 = { version = ">=300", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "^22", allow-prereleases = true }
mypy = "~0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
telenium = { git = "https://github.com/desophos/telenium.git" }

[build-system]
requires = ["poetry-core>=1.2.0a2"]
build-backend = "poetry.core.masonry.api"
